--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
     </div>
     <footer class="bg-slate-800 text-white text-center p-4">
-        <p class="text-sm">Develpoed  by Gaurav Tripathi</p>
+        <p class="text-sm">Develpoed  by janhvi Kute</p>
     </footer>
 </body>
 <script>
